# ros_dnn

./: README.md
ros_dnn/: CMakeLists.txt  package.xml
ros_dnn/config/: ros.yaml
ros_dnn/include/ros_dnn/: object_detector_nodelet.hpp
ros_dnn/launch/: cv_camera.launch  ros_dnn.launch  webcam.launch
ros_dnn/src/: object_detector_nodelet.cpp
ros_dnn/src/ros_dnn/: detect.py
ros_dnn_msgs/: package.xml
ros_dnn_msgs/action/: Detect.action
ros_dnn_msgs/msg/: Prediction.msg
