<?xml version="1.2"?>
<package>
  <name>ros_dnn</name>
  <version>0.1.0</version>
  <description>ROS frontend to OpenCV DNN</description>
  <maintainer email="morten.mjelva@gmail.com">Morten Mjelva</maintainer>
  <license>MIT</license>
  <author email="morten.mjelva@gmail.com">Morten Mjelva</author>

  <!-- Dependencies which this packages needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ros_dnn_msgs</depend>
  <depend>opencv</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
