<?xml version="1.0"?>
<package>
  <name>ros_dnn_msgs</name>
  <version>0.0.1</version>
  <description>ros_dnn is an ROS front-end for OpenCV DNN.</description>
  <maintainer email="morten.mjelva@gmail.com">Morten Mjelva</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/mortenmj/ros_dnn</url>
  <author email="morten.mjelva@gmail.com">Morten Mjelva</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
